Java -> 9
Switch to Java 9 for building and as minimum runtime requirement - https://github.com/kirill-grouchnikov/radiance/issues/2

Fix all deprecated API usages
Remove pre-9 high-DPI detection logic (reflection based)
Update screenshots and documentation