@@ -349,13 +349,13 @@ public class SliderPanel extends ControllablePanel implements Deferrable {
         Hashtable labels = new Hashtable();
         JLabel l0 = new JLabel("Red");
         l0.setForeground(new Color(255, 0, 0));
-        labels.put(new Integer(0), l0);
+        labels.put(Integer.valueOf(0), l0);
         JLabel l1 = new JLabel("Green");
         l1.setForeground(new Color(0, 255, 0));
-        labels.put(new Integer(1), l1);
+        labels.put(Integer.valueOf(1), l1);
         JLabel l2 = new JLabel("Blue");
         l2.setForeground(new Color(0, 0, 255));
-        labels.put(new Integer(2), l2);
+        labels.put(Integer.valueOf(2), l2);
         coloredLabels.setLabelTable(labels);
         return coloredLabels;
     }
@@ -369,11 +369,11 @@ public class SliderPanel extends ControllablePanel implements Deferrable {
         Hashtable labels = new Hashtable();
         JLabel l0 = new JLabel("<html><body>0<br><b>0</b><br><i>0</i></body></html>");
         l0.setForeground(new Color(255, 0, 0));
-        labels.put(new Integer(0), l0);
+        labels.put(Integer.valueOf(0), l0);
         JLabel l1 = new JLabel("<html><body>1<br><b>1</b><br><i>1</i></body></html>");
-        labels.put(new Integer(1), l1);
+        labels.put(Integer.valueOf(1), l1);
         JLabel l2 = new JLabel("<html><body>2<br><b>2</b><br><i>2</i></body></html>");
-        labels.put(new Integer(2), l2);
+        labels.put(Integer.valueOf(2), l2);
         htmlLabels.setLabelTable(labels);
         return htmlLabels;
     }
